# aoc24

./: .gitignore
hs/: aoc24.cabal
hs/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day7Fast.hs  Day8.hs  Day9.hs  Main.hs
hs/src/: Combinators.hs  Parser.hs  Utils.hs
