cabal-version:      3.0
name:               aoc24
version:            0.1.0.0
author:             chema.rodriguez
maintainer:         chema.rodriguez@cabify.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Combinators
        ,Utils
        ,Parser
    build-depends:    
        base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc24
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Day1,Day2,Day3,Day4,Day5,Day6,Day7,Day7Fast,Day8,Day9,Day10,Day11
    build-depends:
        base ^>=4.17.2.1
        ,aoc24
        ,containers ^>= 0.7
        ,MemoTrie ^>= 0.6.10
    hs-source-dirs:   app
    default-language: GHC2021
